# ghibli-image-generator

.devcontainer/: devcontainer.json
ghibli-image/: .gitignore  DEPLOYMENT.md  app.py  pyproject.toml  requirements.txt
ghibli-image/.streamlit/: config.toml
ghibli-image/data/ghibli_model/: README.md  adapter_config.json
ghibli-image/scripts/: generate_cli.py  setup_models.py  streamlit_runner.py
ghibli-image/src/ghibli_image/: main.py
ghibli-image/src/ghibli_image/assets/: styles.css  styles.py
ghibli-image/src/ghibli_image/components/: __init__.py  footer.py  hero.py  input_section.py
ghibli-image/src/ghibli_image/services/: __init__.py  generator_singleton.py  history_service.py  image_generator.py  pipeline_loader.py
ghibli-image/src/ghibli_image/utils/: image_utils.py  session_state.py
